3rd hands on update

--- a/hands-on/03/mococo.ipynb
+++ b/hands-on/03/mococo.ipynb
@@ -2264,11 +2264,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Trigram is slower than Bigram which is slower than Unigram due to increasing amount of features."
+   ]
   }
  ],
  "metadata": {
