--- a/hands-on/04/merrychristmas.ipynb
+++ b/hands-on/04/merrychristmas.ipynb
@@ -239,7 +239,6 @@
     }
    ],
    "source": [
-    "from nltk.tokenize import word_tokenize\n",
     "import os\n",
     "import re\n",
     "import numpy as np\n",
@@ -294,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [
     {
@@ -318,10 +317,10 @@
        "útil        5\n",
        "útils       4\n",
        "überbau     1\n",
-       "Length: 34490, dtype: Sparse[int64, 0]"
+       "Length: 34490, dtype: int64"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 188,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,12 +330,13 @@
     "\n",
     "count_vectorizer = CountVectorizer()\n",
     "freq_iula = count_vectorizer.fit_transform(processed_content)\n",
-    "freq_iula = pd.DataFrame.sparse.from_spmatrix(\n",
-    "    freq_iula, columns=count_vectorizer.get_feature_names_out()\n",
-    ").sum()\n",
+    "freq_iula_df = pd.Series(\n",
+    "    np.squeeze(np.asarray(freq_iula.sum(axis=0))),\n",
+    "    index=count_vectorizer.get_feature_names_out(),\n",
+    ")\n",
     "total = freq_iula.sum()\n",
     "print(f\"{total=}\")\n",
-    "freq_iula\n"
+    "freq_iula_df\n"
    ]
   },
   {
@@ -1057,6 +1057,54 @@
     "IULA[\"P(x|w)\"] = COCA[\"P(x|w)\"]\n",
     "IULA[\"10^9 P(x|w)P(w)\"] = 1e9 * IULA[\"P(w)\"] * IULA[\"P(x|w)\"]\n",
     "IULA.sort_values(\"10^9 P(x|w)P(w)\", ascending=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total=2132844\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "_                    1\n",
+       "_ diskette           1\n",
+       "a                24341\n",
+       "a a                 28\n",
+       "a accumulates        1\n",
+       "                 ...  \n",
+       "útils el             1\n",
+       "útils els            1\n",
+       "útils en             2\n",
+       "überbau              1\n",
+       "überbau is           1\n",
+       "Length: 432306, dtype: int64"
+      ]
+     },
+     "execution_count": 190,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "bigram_vectorizer = CountVectorizer(ngram_range=(1, 2), token_pattern=r\"(?u)\\b\\w+\\b\")\n",
+    "bigram_freq_iula = bigram_vectorizer.fit_transform(processed_content)\n",
+    "bigram_freq_iula_series = pd.Series(\n",
+    "    np.squeeze(np.asarray(bigram_freq_iula.sum(axis=0))),\n",
+    "    index=bigram_vectorizer.get_feature_names_out(),\n",
+    ")\n",
+    "total = bigram_freq_iula.sum()\n",
+    "print(f\"{total=}\")\n",
+    "bigram_freq_iula_series\n"
    ]
   }
  ],
