--- a/assignments/481-04/happynewyear.ipynb
+++ b/assignments/481-04/happynewyear.ipynb
@@ -463,6 +463,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Wortschatz Leipzig - web-public 2018\n",
+    "https://wortschatz.uni-leipzig.de/en/download/English#corpora_type_web-public"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 213,
    "metadata": {},
