--- a/hands-on/05/happychildrenday.ipynb
+++ b/hands-on/05/happychildrenday.ipynb
@@ -167,18 +167,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0.7738931964842558, 0.8151510484299677)"
-      ]
-     },
-     "execution_count": 201,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A=0.7738931964842558\n",
+      "B=0.8151510484299677\n"
+     ]
     }
    ],
    "source": [
@@ -191,7 +189,7 @@
     "dcg_b = np.cumsum(np.divide(bug_b, rank_discount))\n",
     "dcg_ideal = np.cumsum(np.divide(bug_ideal, rank_discount))\n",
     "\n",
-    "np.divide(dcg_a, dcg_ideal)[4], np.divide(dcg_b, dcg_ideal)[4]\n"
+    "print(f'A={np.divide(dcg_a, dcg_ideal)[4]}\\nB={np.divide(dcg_b, dcg_ideal)[4]}')\n"
    ]
   }
  ],
