update server to include hits(pseudo)

--- a/hands-on/06/happyvalentine.ipynb
+++ b/hands-on/06/happyvalentine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -157,19 +157,11 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4670</th>\n",
+       "      <th>10679</th>\n",
        "      <td>https://w3.grad.cmu.ac.th/</td>\n",
        "      <td>Graduate School, Chiang Mai University</td>\n",
        "      <td></td>\n",
        "      <td>[]</td>\n",
-       "      <td>5.454879</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8074</th>\n",
-       "      <td>https://service.camt.cmu.ac.th/gifted</td>\n",
-       "      <td>Gift School 2023</td>\n",
-       "      <td>&lt;&lt; คลิกที่นี่ &gt;&gt; ระบบรับสมัคร Gifted School | ...</td>\n",
-       "      <td>[https://service.camt.cmu.ac.th/gifted/gifted/...</td>\n",
        "      <td>5.454879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -181,7 +173,15 @@
        "      <td>5.454879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10679</th>\n",
+       "      <th>8074</th>\n",
+       "      <td>https://service.camt.cmu.ac.th/gifted</td>\n",
+       "      <td>Gift School 2023</td>\n",
+       "      <td>&lt;&lt; คลิกที่นี่ &gt;&gt; ระบบรับสมัคร Gifted School | ...</td>\n",
+       "      <td>[https://service.camt.cmu.ac.th/gifted/gifted/...</td>\n",
+       "      <td>5.454879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6541</th>\n",
        "      <td>https://w3.grad.cmu.ac.th/</td>\n",
        "      <td>Graduate School, Chiang Mai University</td>\n",
        "      <td></td>\n",
@@ -189,7 +189,7 @@
        "      <td>5.454879</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6541</th>\n",
+       "      <th>4670</th>\n",
        "      <td>https://w3.grad.cmu.ac.th/</td>\n",
        "      <td>Graduate School, Chiang Mai University</td>\n",
        "      <td></td>\n",
@@ -253,8 +253,8 @@
        "      <td>4.931520</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4574</th>\n",
-       "      <td>https://www.tmc.or.th/</td>\n",
+       "      <th>681</th>\n",
+       "      <td>https://tmc.or.th/</td>\n",
        "      <td>แพทยสภา :: The Medical Council of Thailand</td>\n",
        "      <td>X ปิดหน้านี้                                  ...</td>\n",
        "      <td>[https://tmc.or.th/, https://tmc.or.th/En, htt...</td>\n",
@@ -269,7 +269,23 @@
        "      <td>4.907976</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>681</th>\n",
+       "      <th>4574</th>\n",
+       "      <td>https://www.tmc.or.th/</td>\n",
+       "      <td>แพทยสภา :: The Medical Council of Thailand</td>\n",
+       "      <td>X ปิดหน้านี้                                  ...</td>\n",
+       "      <td>[https://tmc.or.th/, https://tmc.or.th/En, htt...</td>\n",
+       "      <td>4.907976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4028</th>\n",
+       "      <td>https://www.apple.com/th/legal/</td>\n",
+       "      <td>Apple - กฎหมาย</td>\n",
+       "      <td>Apple ร้าน Mac iPad iPhone Watch AirPods TV แล...</td>\n",
+       "      <td>[https://www.med.cmu.ac.th/th/, https://www.me...</td>\n",
+       "      <td>4.907976</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5485</th>\n",
        "      <td>https://tmc.or.th/</td>\n",
        "      <td>แพทยสภา :: The Medical Council of Thailand</td>\n",
        "      <td>X ปิดหน้านี้                                  ...</td>\n",
@@ -300,33 +316,17 @@
        "      <td>[https://tmc.or.th/, https://tmc.or.th/En, htt...</td>\n",
        "      <td>4.907976</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4028</th>\n",
-       "      <td>https://www.apple.com/th/legal/</td>\n",
-       "      <td>Apple - กฎหมาย</td>\n",
-       "      <td>Apple ร้าน Mac iPad iPhone Watch AirPods TV แล...</td>\n",
-       "      <td>[https://www.med.cmu.ac.th/th/, https://www.me...</td>\n",
-       "      <td>4.907976</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5485</th>\n",
-       "      <td>https://tmc.or.th/</td>\n",
-       "      <td>แพทยสภา :: The Medical Council of Thailand</td>\n",
-       "      <td>X ปิดหน้านี้                                  ...</td>\n",
-       "      <td>[https://tmc.or.th/, https://tmc.or.th/En, htt...</td>\n",
-       "      <td>4.907976</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "                                                     url  \\\n",
-       "4670                          https://w3.grad.cmu.ac.th/   \n",
-       "8074               https://service.camt.cmu.ac.th/gifted   \n",
-       "10281              https://service.camt.cmu.ac.th/gifted   \n",
        "10679                         https://w3.grad.cmu.ac.th/   \n",
+       "10281              https://service.camt.cmu.ac.th/gifted   \n",
+       "8074               https://service.camt.cmu.ac.th/gifted   \n",
        "6541                          https://w3.grad.cmu.ac.th/   \n",
+       "4670                          https://w3.grad.cmu.ac.th/   \n",
        "673                          https://www.grad.cmu.ac.th/   \n",
        "933                          https://www.grad.cmu.ac.th/   \n",
        "2395   https://service.camt.cmu.ac.th/gifted/gifted/i...   \n",
@@ -334,21 +334,21 @@
        "4674                             https://www.tmc.or.th/    \n",
        "3399                 https://smart.grad.cmu.ac.th/?p=101   \n",
        "605                  https://smart.grad.cmu.ac.th/?p=103   \n",
-       "4574                              https://www.tmc.or.th/   \n",
-       "3386                              https://www.tmc.or.th/   \n",
        "681                                   https://tmc.or.th/   \n",
+       "3386                              https://www.tmc.or.th/   \n",
+       "4574                              https://www.tmc.or.th/   \n",
+       "4028                     https://www.apple.com/th/legal/   \n",
+       "5485                                  https://tmc.or.th/   \n",
        "7683                     https://www.apple.com/th/legal/   \n",
        "8816                     https://www.apple.com/th/legal/   \n",
        "621                               https://www.tmc.or.th/   \n",
-       "4028                     https://www.apple.com/th/legal/   \n",
-       "5485                                  https://tmc.or.th/   \n",
        "\n",
        "                                                   title  \\\n",
-       "4670              Graduate School, Chiang Mai University   \n",
-       "8074                                    Gift School 2023   \n",
-       "10281                                   Gift School 2023   \n",
        "10679             Graduate School, Chiang Mai University   \n",
+       "10281                                   Gift School 2023   \n",
+       "8074                                    Gift School 2023   \n",
        "6541              Graduate School, Chiang Mai University   \n",
+       "4670              Graduate School, Chiang Mai University   \n",
        "673               Graduate School, Chiang Mai University   \n",
        "933               Graduate School, Chiang Mai University   \n",
        "2395                                    Gift School 2566   \n",
@@ -356,21 +356,21 @@
        "4674          แพทยสภา :: The Medical Council of Thailand   \n",
        "3399   DASHBOARD | Graduate School, Chiang Mai Univer...   \n",
        "605    DASHBOARD | Graduate School, Chiang Mai Univer...   \n",
-       "4574          แพทยสภา :: The Medical Council of Thailand   \n",
-       "3386          แพทยสภา :: The Medical Council of Thailand   \n",
        "681           แพทยสภา :: The Medical Council of Thailand   \n",
+       "3386          แพทยสภา :: The Medical Council of Thailand   \n",
+       "4574          แพทยสภา :: The Medical Council of Thailand   \n",
+       "4028                                      Apple - กฎหมาย   \n",
+       "5485          แพทยสภา :: The Medical Council of Thailand   \n",
        "7683                                      Apple - กฎหมาย   \n",
        "8816                                      Apple - กฎหมาย   \n",
        "621           แพทยสภา :: The Medical Council of Thailand   \n",
-       "4028                                      Apple - กฎหมาย   \n",
-       "5485          แพทยสภา :: The Medical Council of Thailand   \n",
        "\n",
        "                                                    text  \\\n",
-       "4670                                                       \n",
-       "8074   << คลิกที่นี่ >> ระบบรับสมัคร Gifted School | ...   \n",
-       "10281  << คลิกที่นี่ >> ระบบรับสมัคร Gifted School | ...   \n",
        "10679                                                      \n",
+       "10281  << คลิกที่นี่ >> ระบบรับสมัคร Gifted School | ...   \n",
+       "8074   << คลิกที่นี่ >> ระบบรับสมัคร Gifted School | ...   \n",
        "6541                                                       \n",
+       "4670                                                       \n",
        "673    MIdS : Multidisciplinary and Interdisciplinary...   \n",
        "933    MIdS : Multidisciplinary and Interdisciplinary...   \n",
        "2395   Login Form  เลขบัตรประชาชน 13 หลัก        ดู P...   \n",
@@ -378,21 +378,21 @@
        "4674   TMC Mail | แผนผังเว็บไซต์    TMC Mail | แผนผัง...   \n",
        "3399   Loading...       Toggle navigation Graduate  D...   \n",
        "605    Loading...       Toggle navigation Graduate  D...   \n",
-       "4574   X ปิดหน้านี้                                  ...   \n",
-       "3386   X ปิดหน้านี้                                  ...   \n",
        "681    X ปิดหน้านี้                                  ...   \n",
+       "3386   X ปิดหน้านี้                                  ...   \n",
+       "4574   X ปิดหน้านี้                                  ...   \n",
+       "4028   Apple ร้าน Mac iPad iPhone Watch AirPods TV แล...   \n",
+       "5485   X ปิดหน้านี้                                  ...   \n",
        "7683   Apple ร้าน Mac iPad iPhone Watch AirPods TV แล...   \n",
        "8816   Apple ร้าน Mac iPad iPhone Watch AirPods TV แล...   \n",
        "621    X ปิดหน้านี้                                  ...   \n",
-       "4028   Apple ร้าน Mac iPad iPhone Watch AirPods TV แล...   \n",
-       "5485   X ปิดหน้านี้                                  ...   \n",
        "\n",
        "                                               url_lists     score  \n",
-       "4670                                                  []  5.454879  \n",
-       "8074   [https://service.camt.cmu.ac.th/gifted/gifted/...  5.454879  \n",
-       "10281  [https://service.camt.cmu.ac.th/gifted/gifted/...  5.454879  \n",
        "10679                                                 []  5.454879  \n",
+       "10281  [https://service.camt.cmu.ac.th/gifted/gifted/...  5.454879  \n",
+       "8074   [https://service.camt.cmu.ac.th/gifted/gifted/...  5.454879  \n",
        "6541                                                  []  5.454879  \n",
+       "4670                                                  []  5.454879  \n",
        "673    [https://cmu.to/admission/, https://w3.grad.cm...  5.313894  \n",
        "933    [https://cmu.to/admission/, https://w3.grad.cm...  5.313894  \n",
        "2395                                                  []  5.259520  \n",
@@ -400,24 +400,25 @@
        "4674   [https://tmc.or.th/, https://tmc.or.th/En, htt...  5.028001  \n",
        "3399   [https://www.med.cmu.ac.th/web/, https://www.m...  4.979293  \n",
        "605    [https://www.med.cmu.ac.th/web/, https://www.m...  4.931520  \n",
-       "4574   [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
-       "3386   [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
        "681    [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
+       "3386   [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
+       "4574   [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
+       "4028   [https://www.med.cmu.ac.th/th/, https://www.me...  4.907976  \n",
+       "5485   [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
        "7683   [https://www.med.cmu.ac.th/th/, https://www.me...  4.907976  \n",
        "8816   [https://www.med.cmu.ac.th/th/, https://www.me...  4.907976  \n",
-       "621    [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  \n",
-       "4028   [https://www.med.cmu.ac.th/th/, https://www.me...  4.907976  \n",
-       "5485   [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  "
+       "621    [https://tmc.or.th/, https://tmc.or.th/En, htt...  4.907976  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "wi = WebIndexer()\n",
-    "wi.search(\"School\").sort_values(\"score\", ascending=False).head(20)\n"
+    "res = wi.search(\"School\")\n",
+    "res[res[\"score\"] > 0].sort_values(\"score\", ascending=False).head(20)\n"
    ]
   },
   {
