hands on 3 with requests

--- a/hands-on/06/happywhat.ipynb
+++ b/hands-on/06/happywhat.ipynb
@@ -507,6 +507,73 @@
     "    columns=[\"title\", \"url\", \"text\", \"score\"],\n",
     ")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Flask application (pg. 82-84)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'elapse': 0.02182459831237793,\n",
+       " 'results': [{'score': 0.0011093874,\n",
+       "   'text': \"Home        About us           Back      Vision and Mission        Map        List of CAMT's staff  \",\n",
+       "   'title': 'Home',\n",
+       "   'url': 'https://www.camt.cmu.ac.th/index.php/en/'},\n",
+       "  {'score': 0.00090815144,\n",
+       "   'text': 'Ask a Question  mids@cmu.ac.th       ภาษาไทย   Login  Staff                                         ',\n",
+       "   'title': 'MIdS : (M)ultidisciplinary and (I)nter(d)isciplinary (S)chool',\n",
+       "   'url': 'https://www.mids.cmu.ac.th/'},\n",
+       "  {'score': 0.00072371966,\n",
+       "   'text': \"Home        About us           Back      Vision and Mission        Map        List of CAMT's staff  \",\n",
+       "   'title': 'วิทยาลัยศิลปะ สื่อและเทคโนโลยี',\n",
+       "   'url': 'https://www.camt.cmu.ac.th/index.php/en/component/users/?view=remind&Itemid=101'},\n",
+       "  {'score': 0.0007085531,\n",
+       "   'text': \"Home        About us           Back      Vision and Mission        Map        List of CAMT's staff  \",\n",
+       "   'title': 'วิทยาลัยศิลปะ สื่อและเทคโนโลยี',\n",
+       "   'url': 'https://www.camt.cmu.ac.th/index.php/en/component/users/?view=reset&Itemid=101'},\n",
+       "  {'score': 0.0005583955,\n",
+       "   'text': \"Home        About us           Back      Vision and Mission        Map        List of CAMT's staff  \",\n",
+       "   'title': 'Home',\n",
+       "   'url': 'https://www.camt.cmu.ac.th/index.php/th/?p=&lang=en'},\n",
+       "  {'score': 0.0005388202,\n",
+       "   'text': 'Apple Store Mac iPad iPhone Watch Vision AirPods TV & Home Entertainment Accessories Support    0 + ',\n",
+       "   'title': 'Browse privately in Safari on Mac - Apple Support',\n",
+       "   'url': 'https://support.apple.com/kb/ph21413'},\n",
+       "  {'score': 0.0003382472,\n",
+       "   'text': 'Skip to main content   Solutions       For Individuals       For Business     Overview      Small Bu',\n",
+       "   'title': 'Google Workspace: Secure Online Productivity & Collaboration Tools',\n",
+       "   'url': 'https://workspace.google.com/intl/en/?utm_source=formsforwork&utm_medium=et&utm_content=learnmore&utm_campaign=globalnav'},\n",
+       "  {'score': 0.000262689,\n",
+       "   'text': 'Compliance resource center Google Cloud’s industry-leading certifications, documentation, and third-',\n",
+       "   'title': 'Cloud Compliance & Regulations Resources | Google Cloud',\n",
+       "   'url': 'https://cloud.google.com/security/compliance?hl=en'},\n",
+       "  {'score': 0.0001507457,\n",
+       "   'text': 'Overview    close     Accelerate your digital transformation  Whether your business is early in its ',\n",
+       "   'title': 'Google Cloud Privacy Notice',\n",
+       "   'url': 'https://cloud.google.com/terms/cloud-privacy-notice?hl=en_US'}],\n",
+       " 'status': 'success',\n",
+       " 'total_hit': 9}"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "json.loads(requests.get(\"http://127.0.0.1:5000/search_es?query=vision\").text)\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
