--- a/hands-on/06/happywhat.ipynb
+++ b/hands-on/06/happywhat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,41 +207,44 @@
     "        print(f\"{len(all_urls)=}\")\n",
     "        url_idx = {v: i for (i, v) in enumerate(all_urls)}\n",
     "        size = len(all_urls)\n",
-    "        url_matrix = sparse.lil_matrix((size, size), dtype=bool)\n",
+    "        url_matrix = sparse.lil_array((size, size), dtype=int)\n",
     "        for url in url_maps:\n",
     "            if len(url_maps[url]) > 0 and len(all_urls) > 0:\n",
     "                url_matrix[\n",
     "                    url_idx[url], [url_idx[sub_url] for sub_url in url_maps[url]]\n",
-    "                ] = True\n",
-    "        rows, cols = np.where(url_matrix.sum(1) == 0)\n",
-    "        print(len(rows))\n",
-    "        url_matrix[rows, :] = np.ones(url_matrix.shape[0], bool)\n",
-    "        url_matrix = url_matrix.multiply(sparse.csr_matrix(1 / url_matrix.sum(axis=1)))\n",
-    "        print(url_matrix.data.nbytes)\n",
-    "        x0 = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
-    "        v = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
+    "                ] = 1\n",
+    "        # return url_matrix\n",
+    "        print(f\"bytes@prepad: {url_matrix.data.nbytes}\")\n",
+    "        rows = np.where(url_matrix.sum(1) == 0)[0]\n",
+    "        url_matrix[rows, :] = np.ones(size, int)\n",
+    "        print(f\"bytes@postpad: {url_matrix.data.nbytes}\")\n",
+    "        return url_matrix\n",
+    "        url_matrix = (1 / url_matrix.sum(1)) * url_matrix\n",
+    "        print(f\"bytes@multiply: {url_matrix.data.nbytes}\")\n",
+    "        # x0 = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
+    "        # v = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
     "\n",
-    "        prev_Px = x0\n",
-    "        Px = self.alpha * x0 * url_matrix + (1 - self.alpha) * v\n",
-    "        print(v.T)\n",
-    "        i = 0\n",
-    "        while any(abs(np.asarray(prev_Px).flatten() - np.asarray(Px).flatten()) > 1e-8):\n",
-    "            i += 1\n",
-    "            prev_Px = Px\n",
-    "            Px = self.alpha * Px * url_matrix + (1 - self.alpha) * v\n",
+    "        # prev_Px = x0\n",
+    "        # Px = self.alpha * x0 @ url_matrix + (1 - self.alpha) * v\n",
+    "        # print(v.T)\n",
+    "        # i = 0\n",
+    "        # while any(abs(np.asarray(prev_Px).flatten() - np.asarray(Px).flatten()) > 1e-8):\n",
+    "        #     i += 1\n",
+    "        #     prev_Px = Px\n",
+    "        #     Px = self.alpha * Px @ url_matrix + (1 - self.alpha) * v\n",
     "\n",
-    "        print(\n",
-    "            \"Converged in {0} iterations: {1}\".format(\n",
-    "                i, np.around(np.asarray(Px).flatten().astype(float), 5)\n",
-    "            )\n",
-    "        )\n",
+    "        # print(\n",
+    "        #     \"Converged in {0} iterations: {1}\".format(\n",
+    "        #         i, np.around(np.asarray(Px).flatten().astype(float), 5)\n",
+    "        #     )\n",
+    "        # )\n",
     "\n",
-    "        self.pr_result = pd.Series(Px, index=all_urls)\n"
+    "        # self.pr_result = pd.Series(Px, index=all_urls)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -249,16 +252,34 @@
      "output_type": "stream",
      "text": [
       "len(all_urls)=7044\n",
-      "6699\n",
-      "377642016\n",
-      "[0.00014196 0.00014196 0.00014196 ... 0.00014196 0.00014196 0.00014196]\n",
-      "Converged in 17 iterations: [0.00014 0.00013 0.00013 ... 0.00028 0.00014 0.00014]\n"
+      "bytes@prepad: 56352\n",
+      "bytes@postpad: 56352\n"
      ]
     }
    ],
    "source": [
     "pr = Pr(alpha=0.85)\n",
-    "pr.pr_calc()\n"
+    "out = pr.pr_calc()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7044])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "out[[0], :].multiply(1 )\n"
    ]
   },
   {
