--- a/hands-on/06/happywhat.ipynb
+++ b/hands-on/06/happywhat.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "1.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,19 +62,22 @@
     "    ]\n",
     ")\n",
     "\n",
+    "L = sparse.lil_array(L)\n",
+    "\n",
     "a = 0.85\n",
     "\n",
     "\n",
-    "rows, cols = np.where(L.sum(1) == 0)\n",
+    "rows = np.where(L.sum(1) == 0)[0]\n",
     "L[rows] = 1 / 7\n",
     "# P = ((a * L) + (1 - a) * v / 7)\n",
     "prev_Px = x0\n",
-    "Px = a * x0 * L + (1 - a) * v\n",
+    "Px = a * prev_Px @ L + (1 - a) * v\n",
     "i = 0\n",
+    "\n",
     "while any(abs(np.asarray(prev_Px).flatten() - np.asarray(Px).flatten()) > 1e-8):\n",
     "    i += 1\n",
     "    prev_Px = Px\n",
-    "    Px = a * Px * L + (1 - a) * v\n",
+    "    Px = a * prev_Px @ L + (1 - a) * v\n",
     "\n",
     "print(\"Converged in {0} iterations: {1}\".format(i, np.asarray(Px).flatten()))\n",
     "Px.sum()\n"
@@ -82,16 +85,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "48"
+       "array([[0.02142857, 0.02142857, 0.02142857, 0.02142857, 0.02142857,\n",
+       "        0.02142857, 0.02142857]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(1 - a) * v\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/mansmooth/anaconda3/envs/se481-2023/lib/python3.10/site-packages/scipy/sparse/_base.py:719: VisibleDeprecationWarning: `.A` is deprecated and will be removed in v1.13.0. Use `.toarray()` instead.\n",
+      "  warn(np.VisibleDeprecationWarning(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.14285714, 0.14285714, 0.14285714, 0.14285714, 0.14285714,\n",
+       "        0.14285714, 0.14285714],\n",
+       "       [0.5       , 0.        , 0.5       , 0.        , 0.        ,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.        , 0.        , 1.        ,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.5       , 0.        , 0.        ,\n",
+       "        0.        , 0.5       ],\n",
+       "       [0.5       , 0.        , 0.        , 0.        , 0.        ,\n",
+       "        0.5       , 0.        ],\n",
+       "       [0.        , 0.        , 1.        , 0.        , 0.        ,\n",
+       "        0.        , 0.        ],\n",
+       "       [0.        , 0.        , 0.5       , 0.        , 0.        ,\n",
+       "        0.5       , 0.        ]])"
+      ]
+     },
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,18 +153,18 @@
     "        [0, 0, 1, 0, 0, 1, 0],\n",
     "    ]\n",
     ")\n",
-    "sL = sparse.lil_matrix(L, dtype=bool)\n",
-    "rows, cols = np.where(sL.sum(1) == 0)\n",
+    "sL = sparse.lil_array(L, dtype=bool)\n",
+    "rows = np.where(sL.sum(1) == 0)[0]\n",
     "sL[rows, :] = np.ones(sL.shape[0], bool)\n",
     "\n",
-    "n = sL.multiply(sparse.csr_matrix(1 / sL.sum(axis=1)))\n",
     "\n",
-    "sys.getsizeof(n.tocoo())\n"
+    "n = sL * sparse.lil_array(1 / sL.sum(axis=1)).T\n",
+    "n.A\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +181,7 @@
        "1.0000000000000007"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,6 +213,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[0.16020408, 0.03877551, 0.34234694, 0.03877551, 0.16020408,\n",
+       "         0.16020408, 0.0994898 ]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x0 * P\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -176,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,33 +284,32 @@
     "        rows = np.where(url_matrix.sum(1) == 0)[0]\n",
     "        url_matrix[rows, :] = np.ones(size, int)\n",
     "        print(f\"bytes@postpad: {url_matrix.data.nbytes}\")\n",
-    "        return url_matrix\n",
-    "        url_matrix = (1 / url_matrix.sum(1)) * url_matrix\n",
+    "        url_matrix = url_matrix * sparse.coo_array(1 / url_matrix.sum(axis=1)).T\n",
     "        print(f\"bytes@multiply: {url_matrix.data.nbytes}\")\n",
-    "        # x0 = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
-    "        # v = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
     "\n",
-    "        # prev_Px = x0\n",
-    "        # Px = self.alpha * x0 @ url_matrix + (1 - self.alpha) * v\n",
-    "        # print(v.T)\n",
-    "        # i = 0\n",
-    "        # while any(abs(np.asarray(prev_Px).flatten() - np.asarray(Px).flatten()) > 1e-8):\n",
-    "        #     i += 1\n",
-    "        #     prev_Px = Px\n",
-    "        #     Px = self.alpha * Px @ url_matrix + (1 - self.alpha) * v\n",
+    "        x0 = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
+    "        v = np.repeat(1 / len(all_urls), len(all_urls)).T\n",
     "\n",
-    "        # print(\n",
-    "        #     \"Converged in {0} iterations: {1}\".format(\n",
-    "        #         i, np.around(np.asarray(Px).flatten().astype(float), 5)\n",
-    "        #     )\n",
-    "        # )\n",
+    "        prev_Px = x0\n",
+    "        Px = self.alpha * x0 @ url_matrix + (1 - self.alpha) * v\n",
+    "        i = 0\n",
+    "        while any(abs(np.asarray(prev_Px).flatten() - np.asarray(Px).flatten()) > 1e-8):\n",
+    "            i += 1\n",
+    "            prev_Px = Px\n",
+    "            Px = self.alpha * Px @ url_matrix + (1 - self.alpha) * v\n",
     "\n",
-    "        # self.pr_result = pd.Series(Px, index=all_urls)\n"
+    "        print(\n",
+    "            \"Converged in {0} iterations: {1}\".format(\n",
+    "                i, np.around(np.asarray(Px).flatten().astype(float), 5)\n",
+    "            )\n",
+    "        )\n",
+    "\n",
+    "        self.pr_result = pd.Series(Px, index=all_urls)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -253,38 +318,41 @@
      "text": [
       "len(all_urls)=7044\n",
       "bytes@prepad: 56352\n",
-      "bytes@postpad: 56352\n"
+      "bytes@postpad: 56352\n",
+      "bytes@multiply: 377642016\n",
+      "[0.00014196 0.00014196 0.00014196 ... 0.00014196 0.00014196 0.00014196]\n",
+      "Converged in 17 iterations: [0.00014 0.00013 0.00023 ... 0.00014 0.00013 0.00013]\n"
      ]
     }
    ],
    "source": [
     "pr = Pr(alpha=0.85)\n",
-    "out = pr.pr_calc()\n"
+    "pr.pr_calc()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([7044])"
+       "1.0000000000000426"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "out[[0], :].multiply(1 )\n"
+    "pr.pr_result.sum()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +361,7 @@
        "ObjectApiResponse({'name': '30bfd7881813', 'cluster_name': 'docker-cluster', 'cluster_uuid': 'o_7sMfofS_G5l-SWN2IbUA', 'version': {'number': '8.12.1', 'build_flavor': 'default', 'build_type': 'docker', 'build_hash': '6185ba65d27469afabc9bc951cded6c17c21e3f3', 'build_date': '2024-02-01T13:07:13.727175297Z', 'build_snapshot': False, 'lucene_version': '9.9.2', 'minimum_wire_compatibility_version': '7.17.0', 'minimum_index_compatibility_version': '7.0.0'}, 'tagline': 'You Know, for Search'})"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -341,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -349,10 +417,11 @@
      "output_type": "stream",
      "text": [
       "len(all_urls)=7044\n",
-      "6699\n",
-      "377642016\n",
+      "bytes@prepad: 56352\n",
+      "bytes@postpad: 56352\n",
+      "bytes@multiply: 377642016\n",
       "[0.00014196 0.00014196 0.00014196 ... 0.00014196 0.00014196 0.00014196]\n",
-      "Converged in 17 iterations: [0.00014 0.00013 0.00013 ... 0.00028 0.00014 0.00014]\n"
+      "Converged in 17 iterations: [0.00014 0.00013 0.00023 ... 0.00014 0.00013 0.00013]\n"
      ]
     }
    ],
@@ -363,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -496,14 +565,12 @@
        "8  Overview    close     Accelerate your digital ...  0.000151  "
       ]
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import requests\n",
-    "\n",
     "results = es.search(\n",
     "    body={\n",
     "        \"_source\": {\"excludes\": [\"url_lists\"]},\n",
